manifests-raw/bms/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: bms

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          # TODO: CM
          image: ghcr.io/mohammadhosein-p/aparmo-fr:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "300m"
              memory: "256Mi"
              
      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: bms

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
